# glimpse

./: .audit.toml  .gitignore  Cargo.toml  Justfile  LICENSE  Makefile  README.md  demo.tape  deny.toml  rust-toolchain.toml  rustfmt.toml  typos.toml
.github/workflows/: ci.yml
Formula/: glim.rb
src/: app.rs  event.rs  github.rs  handlers.rs  lib.rs  main.rs  semantics.rs  tui.rs  ui.rs  utils.rs
